add card stack, fragments

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#F7B142</color>
     <color name="colorWhite">#F6F9FA</color>
     <color name="colorGrey">#757575</color>
+    <color name="colorLightGrey">#CACACA</color>
 </resources>
