--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -4,14 +4,8 @@
         xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
         android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="kek"
-              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-              app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-              android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-              android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
-
     <androidx.cardview.widget.CardView
-            android:layout_width="395dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardCornerRadius="10dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
@@ -29,7 +23,7 @@
                     android:id="@+id/avatar_imageView"
                     android:layout_width="72dp"
                     android:layout_height="72dp"
-                    tools:src="@drawable/wendy"
+                    android:src="@drawable/wendy"
                     app:civ_border_color="@color/colorAccent"
                     app:civ_border_width="2dp"
                     android:layout_centerVertical="true"/>
@@ -38,7 +32,7 @@
                     android:id="@+id/username_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    tools:text="Username"
+                    android:text="Username"
                     android:textStyle="bold"
                     android:textSize="24sp"
                     android:layout_marginLeft="16dp"
@@ -48,7 +42,7 @@
                     android:id="@+id/level_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    tools:text="A2 - Elementary"
+                    android:text="A2 - Elementary"
                     android:textSize="18sp"
                     android:layout_marginLeft="16dp"
                     android:layout_toRightOf="@+id/avatar_imageView"
