--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorWhite">#F6F9FA</color>
     <color name="colorGrey">#757575</color>
     <color name="colorLightGrey">#CACACA</color>
+    <color name="colorRed">#D67A8A</color>
 </resources>
