--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,7 +18,20 @@
             android:layout_marginTop="8dp"
             android:layout_gravity="center_horizontal"/>
 
+    <FrameLayout
+            android:id="@+id/login_loading_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|center_horizontal"/>
+
+    </FrameLayout>
+
     <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/login_form_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
