--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,8 +33,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/login_form_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            android:layout_height="match_parent">
 
         <TextView
                 android:text="@string/greeting"
@@ -90,6 +89,7 @@
                 app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.113"/>
 
         <Button
+                android:onClick="onCreateButtonClick"
                 android:text="@string/create_account"
                 style="@style/Widget.AppCompat.Button.Borderless.Colored"
                 android:layout_width="wrap_content"
