some edit with firebase

--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -32,7 +32,7 @@
                     android:id="@+id/username_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Username"
+                    tools:text="Username"
                     android:textStyle="bold"
                     android:textSize="24sp"
                     android:layout_marginLeft="16dp"
@@ -42,7 +42,7 @@
                     android:id="@+id/level_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="A2 - Elementary"
+                    tools:text="Level"
                     android:textSize="18sp"
                     android:layout_marginLeft="16dp"
                     android:layout_toRightOf="@+id/avatar_imageView"
