--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -9,35 +9,30 @@
             android:id="@+id/settings_card"
             android:layout_width="match_parent"
             app:cardCornerRadius="10dp"
-            android:clickable="true"
-            android:foreground="?android:attr/selectableItemBackground"
             android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.013">
 
-        <LinearLayout
+        <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="64dp"
+                android:onClick="onLogOutButtonClick"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true">
 
-            <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="64dp"
-                    android:onClick="onLogOutButtonClick">
+            <TextView
+                    android:text="@string/logout"
+                    android:textSize="20sp"
+                    android:textColor="@color/colorRed"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="16dp"/>
 
-                <TextView
-                        android:text="@string/logout"
-                        android:textSize="20sp"
-                        android:textColor="@color/colorRed"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginStart="16dp"/>
-
-            </FrameLayout>
-
-        </LinearLayout>
+        </FrameLayout>
 
     </androidx.cardview.widget.CardView>
 
