--- a/app/src/main/res/layout/card_word.xml
+++ b/app/src/main/res/layout/card_word.xml
@@ -1,66 +1,286 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-        android:layout_height="match_parent"
+<androidx.cardview.widget.CardView
+        android:layout_height="500dp"
         android:layout_width="match_parent"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_layout">
+        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/card_layout"
+        app:cardCornerRadius="10dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintVertical_bias="0.012">
 
-    <androidx.cardview.widget.CardView
-            android:id="@+id/card_word"
+    <FrameLayout
+            android:layout_height="match_parent"
             android:layout_width="match_parent"
-            app:cardCornerRadius="10dp"
-            android:layout_height="match_parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintVertical_bias="0.012">
+            android:id="@+id/layout_show_word"
+            android:layout_marginBottom="100dp"
+            android:visibility="visible">
 
+        <TextView
+                tools:text="word"
+                android:textSize="32sp"
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/word_show_english_text"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_marginBottom="20dp"/>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <TextView
+                tools:text="слово"
+                android:textSize="32sp"
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/word_show_translate_text"
+                android:layout_gravity="center_vertical|center_horizontal"
+                android:layout_marginTop="50dp"/>
+
+        <View
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="1dp"
+                android:background="@color/colorLightGrey"
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="96dp"
+                android:layout_marginEnd="96dp"
+                android:layout_gravity="center_vertical"/>
 
-            <TextView
-                    android:text="word"
-                    android:textSize="32sp"
-                    android:textStyle="bold"
+    </FrameLayout>
+
+    <FrameLayout
+            android:id="@+id/layout_variant"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="50dp"
+            android:visibility="gone">
+
+        <TextView
+                tools:text="word"
+                android:textSize="32sp"
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/word_hide_english_text"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="50dp"/>
+
+        <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center_vertical|center_horizontal"
+                android:layout_marginTop="25dp">
+
+            <Button
+                    android:id="@+id/show_word_button"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:id="@+id/word_english_text"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.08"/>
+                    android:layout_height="wrap_content"
+                    android:text="@string/show_word"
+                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                    android:drawableTop="@drawable/ic_remove_red_eye_grey_24dp"
+                    android:drawablePadding="8dp"
+                    android:textColor="@color/colorLightGrey"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:layout_margin="8dp"/>
 
-            <TextView
-                    android:text="слово"
-                    android:textSize="32sp"
-                    android:textStyle="bold"
+            <Button
+                    android:id="@+id/write_word_button"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:id="@+id/word_translate_text"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/view" app:layout_constraintVertical_bias="0.018"/>
-            <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/colorLightGrey"
-                    android:layout_marginTop="16dp"
-                    app:layout_constraintTop_toBottomOf="@+id/word_english_text"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="96dp"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="96dp"
-                    app:layout_constraintHorizontal_bias="1.0" android:id="@+id/view" android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.006">
+                    android:layout_height="wrap_content"
+                    android:text="@string/write_word"
+                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                    android:drawableTop="@drawable/ic_edit_grey_24dp"
+                    android:drawablePadding="8dp"
+                    android:textColor="@color/colorLightGrey"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:layout_margin="8dp"/>
 
-            </View>
+            <Button
+                    android:id="@+id/choose_word_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/choose_word"
+                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                    android:drawableTop="@drawable/ic_speaker_notes_grey_24dp"
+                    android:drawablePadding="8dp"
+                    android:textColor="@color/colorLightGrey"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:layout_margin="8dp"/>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
+        <View
+                android:layout_height="1dp"
+                android:layout_width="match_parent"
+                android:background="@color/colorLightGrey"
+                android:layout_gravity="center_horizontal|bottom"
+                android:layout_marginStart="32dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginBottom="40dp"/>
 
-</FrameLayout>
+    </FrameLayout>
+
+    <FrameLayout
+            android:id="@+id/layout_write_word"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="50dp"
+            android:visibility="gone">
+
+        <TextView
+                tools:text="word"
+                android:textSize="32sp"
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/word_write_english_text"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="50dp"/>
+
+        <LinearLayout
+                android:id="@+id/write_word_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_gravity="center_horizontal|center_vertical">
+
+            <EditText
+                    android:id="@+id/word_written_edit_text"
+                    android:layout_width="250dp"
+                    android:hint="@string/translate"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"/>
+
+            <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_gravity="center_horizontal">
+
+                <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                        android:drawableStart="@drawable/ic_done_green_24dp"
+                        android:drawablePadding="8dp"
+                        android:text="@string/check"
+                        android:textColor="@color/colorGreen"
+                        android:layout_marginEnd="16dp"/>
+
+                <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                        android:drawableStart="@drawable/ic_help_outline_orange_24dp"
+                        android:drawablePadding="8dp"
+                        android:text="@string/help"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </FrameLayout>
+
+    <FrameLayout
+            android:id="@+id/layout_choose_word"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone">
+
+        <TextView
+                tools:text="word"
+                android:textSize="32sp"
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/word_choose_english_text"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="50dp"/>
+
+
+        <GridLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:columnCount="2"
+                android:rowCount="2"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_marginBottom="25dp">
+
+            <Button
+                    android:id="@+id/choose_one_button"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                    tools:text="word1"
+                    android:layout_margin="8dp"/>
+
+            <Button
+                    android:id="@+id/choose_two_button"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                    tools:text="word2"
+                    android:layout_margin="8dp"/>
+
+            <Button
+                    android:id="@+id/choose_three_button"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                    tools:text="word3"
+                    android:layout_margin="8dp"/>
+
+            <Button
+                    android:id="@+id/choose_four_button"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                    tools:text="word4"
+                    android:layout_margin="8dp"/>
+
+        </GridLayout>
+
+    </FrameLayout>
+
+    <Button
+            android:id="@+id/swipe_left_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableTop="@drawable/ic_arrow_back_green_24dp"
+            tools:text="@string/know_it"
+            android:textColor="@color/colorGreen"
+            android:drawablePadding="8dp"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_gravity="bottom"/>
+
+    <Button
+            android:id="@+id/swipe_right_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableTop="@drawable/ic_arrow_forward_red_24dp"
+            tools:text="@string/learn_it"
+            android:textColor="@color/colorRed"
+            android:drawablePadding="8dp"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_gravity="bottom|end"/>
+
+    <Button
+            android:id="@+id/swipe_bottom_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableTop="@drawable/ic_arrow_downward_grey_24dp"
+            tools:text="@string/learn_later"
+            android:textColor="@color/colorLightGrey"
+            android:drawablePadding="8dp"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_gravity="bottom|center_horizontal"/>
+
+</androidx.cardview.widget.CardView>
