--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorGrey">#757575</color>
     <color name="colorLightGrey">#CACACA</color>
     <color name="colorRed">#D67A8A</color>
+    <color name="colorGreen">#A2E094</color>
 </resources>
