--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
 
-            tools:context=".activity.MainActivity">
+            tools:context=".ui.activity.MainActivity">
 
         <TextView
                 android:id="@+id/appbar_text"
