--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,6 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-
             tools:context=".ui.activity.MainActivity">
 
         <TextView
@@ -42,8 +41,7 @@
                 android:id="@+id/fragment_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp" android:layout_marginBottom="56dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="56dp"
                 app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="80dp"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -61,7 +59,8 @@
                 app:itemIconTint="@color/bottom_nav_selector"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:menu="@menu/navigation"/>
+                app:menu="@menu/navigation"
+                app:elevation="16dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
