--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -17,7 +17,8 @@
             android:id="@+id/recyclerview_categories_login"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="100dp">
+            android:layout_marginTop="100dp"
+            android:visibility="gone">
 
     </androidx.recyclerview.widget.RecyclerView>
 
