--- a/app/src/main/res/layout/fragment_password.xml
+++ b/app/src/main/res/layout/fragment_password.xml
@@ -7,8 +7,8 @@
                                                    android:layout_height="match_parent">
 
     <EditText
-            android:hint="@string/email"
-            android:id="@+id/edittext_text"
+            android:hint="@string/password"
+            android:id="@+id/edittext_password"
             android:inputType="textPassword"
             android:imeOptions="actionDone"
             android:layout_width="match_parent"
@@ -20,13 +20,13 @@
 
     <TextView
             android:id="@+id/text_desc"
-            tools:text="First, input your e-mail"
+            android:text="@string/input_password"
             android:textSize="16sp"
             android:layout_width="312dp"
             android:layout_height="65dp" app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/edittext_text"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/edittext_password"
             app:layout_constraintHorizontal_bias="0.518" app:layout_constraintVertical_bias="0.003"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
