some code optimization, remove a lot of code from MainActivity

--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -14,7 +14,7 @@
             android:layout_margin="8dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/avatar_imageView"
+                android:id="@+id/imageview_avatar"
                 android:layout_width="128dp"
                 android:layout_height="128dp"
                 android:src="@drawable/jonsnow"
