--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,60 +8,21 @@
         android:layout_height="match_parent">
 
     <FrameLayout
-            android:id="@+id/loading_layout"
+            android:id="@+id/layout_fragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        <ProgressBar
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center_vertical"/>
+            android:layout_height="match_parent"
+            android:layout_marginBottom="56dp">
 
     </FrameLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context=".ui.activity.MainActivity">
-
-        <TextView
-                android:id="@+id/appbar_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/title_account"
-                android:fontFamily="@font/pacifico"
-                android:textColor="@color/colorAccent"
-                android:textSize="24sp"
-                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/navigation" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.013"/>
-
-        <FrameLayout
-                android:id="@+id/fragment_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="56dp"
-                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="80dp"
-                app:layout_constraintTop_toTopOf="parent">
-
-        </FrameLayout>
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-                android:id="@+id/navigation"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="0dp"
-                android:layout_marginStart="0dp"
-                android:background="?android:attr/windowBackground"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:itemTextColor="@color/bottom_nav_selector"
-                app:itemIconTint="@color/bottom_nav_selector"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:menu="@menu/navigation"
-                app:elevation="16dp"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_height="wrap_content"
+            android:background="?android:attr/windowBackground"
+            app:itemTextColor="@color/bottom_nav_selector"
+            app:itemIconTint="@color/bottom_nav_selector"
+            app:menu="@menu/navigation"
+            android:layout_gravity="bottom"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
