--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,110 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">
+        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
+    <ProgressBar
+            android:id="@+id/progressbar_account"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="10dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.013"
-            android:id="@+id/account_card"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:clickable="true"
-            android:focusable="true">
+            android:layout_gravity="center_horizontal|center_vertical"/>
 
-        <RelativeLayout
-                android:layout_margin="16dp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/avatar_imageView"
-                    android:layout_width="72dp"
-                    android:layout_height="72dp"
-                    android:src="@drawable/jonsnow"
-                    app:civ_border_color="@color/colorAccent"
-                    app:civ_border_width="2dp"
-                    android:layout_centerVertical="true"
-                    android:transitionName="avatar_image"/>
-
-            <TextView
-                    android:id="@+id/username_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="Username"
-                    android:textStyle="bold"
-                    android:textSize="24sp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_toRightOf="@+id/avatar_imageView"/>
-
-            <TextView
-                    android:id="@+id/level_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="Level"
-                    android:textSize="18sp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_toRightOf="@+id/avatar_imageView"
-                    android:layout_below="@+id/username_text"/>
-
-        </RelativeLayout>
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-            android:id="@+id/categories_card"
+    <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            app:cardCornerRadius="10dp"
-            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/account_card" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintVertical_bias="0.022">
+            android:layout_height="match_parent">
 
-        <RelativeLayout
-                android:layout_margin="16dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/layout_account"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-            <TextView
-                    android:id="@+id/categories_header"
-                    android:text="@string/categories"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:textSize="24sp"/>
-
-            <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/categories_rv"
+            <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/categories_header"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
-            >
+                    app:cardCornerRadius="10dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.013"
+                    android:id="@+id/card_account"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true">
 
-            </androidx.recyclerview.widget.RecyclerView>
+                <RelativeLayout
+                        android:layout_margin="16dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
 
-            <Button
-                    android:id="@+id/edit_categories_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawableStart="@drawable/ic_edit_black_24dp"
-                    android:text="@string/edit_categories"
-                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                    android:layout_below="@id/categories_rv"
-                    android:layout_marginStart="-8dp"
-                    android:layout_marginTop="8dp"
-                    android:drawablePadding="8dp"/>
+                    <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/imageview_avatar"
+                            android:layout_width="72dp"
+                            android:layout_height="72dp"
+                            android:src="@drawable/jonsnow"
+                            app:civ_border_color="@color/colorAccent"
+                            app:civ_border_width="2dp"
+                            android:layout_centerVertical="true"
+                            android:transitionName="avatar_image"/>
 
-        </RelativeLayout>
+                    <TextView
+                            android:id="@+id/text_username"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            tools:text="Username"
+                            android:textStyle="bold"
+                            android:textSize="24sp"
+                            android:layout_marginLeft="16dp"
+                            android:layout_toRightOf="@+id/imageview_avatar"/>
 
-    </androidx.cardview.widget.CardView>
+                    <TextView
+                            android:id="@+id/text_level"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            tools:text="Level"
+                            android:textSize="18sp"
+                            android:layout_marginLeft="16dp"
+                            android:layout_toRightOf="@+id/imageview_avatar"
+                            android:layout_below="@+id/text_username"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+                </RelativeLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                    android:id="@+id/categories_card"
+                    android:layout_width="match_parent"
+                    app:cardCornerRadius="10dp"
+                    android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/card_account" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintVertical_bias="0.022">
+
+                <RelativeLayout
+                        android:layout_margin="16dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                    <TextView
+                            android:id="@+id/text_categories"
+                            android:text="@string/categories"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textStyle="bold"
+                            android:textSize="24sp"/>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/recyclerview_categories_account"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/text_categories"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginBottom="8dp"
+                    >
+
+                    </androidx.recyclerview.widget.RecyclerView>
+
+                    <Button
+                            android:id="@+id/button_edit_categories"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:drawableStart="@drawable/ic_edit_black_24dp"
+                            android:text="@string/edit_categories"
+                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                            android:layout_below="@id/recyclerview_categories_account"
+                            android:layout_marginStart="-8dp"
+                            android:layout_marginTop="8dp"
+                            android:drawablePadding="8dp"/>
+
+                </RelativeLayout>
+
+            </androidx.cardview.widget.CardView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
