--- a/app/src/main/res/layout/fragment_learn.xml
+++ b/app/src/main/res/layout/fragment_learn.xml
@@ -7,11 +7,17 @@
         xmlns:tools="http://schemas.android.com/tools">
 
     <com.yuyakaido.android.cardstackview.CardStackView
-            android:id="@+id/word_card_stack"
+            android:id="@+id/cardstack_words"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
     </com.yuyakaido.android.cardstackview.CardStackView>
+
+    <ProgressBar
+            android:id="@+id/progressbar_learn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal"/>
 
 
     <FrameLayout
