--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -5,73 +5,161 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.activity.UserActivity">
+        tools:context=".ui.activity.UserActivity"
+        android:id="@+id/layout_user">
 
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_margin="8dp">
+            android:orientation="vertical">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/imageview_avatar"
-                android:layout_width="128dp"
-                android:layout_height="128dp"
-                android:src="@drawable/jonsnow"
-                app:civ_border_color="@color/colorAccent"
-                app:civ_border_width="2dp"
+        <TextView
+                android:id="@+id/text_header"
+                android:text="@string/account"
+                android:textColor="@color/colorAccent"
+                android:fontFamily="@font/pacifico"
+                android:textSize="26sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="32dp"
-                android:transitionName="avatar_image"/>
-
-        <EditText
-                android:id="@+id/username_edit_text"
-                android:hint="@string/username"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginBottom="8dp"/>
-
-        <EditText
-                android:id="@+id/email_edit_text"
-                android:hint="@string/email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"/>
 
-        <EditText
-                android:id="@+id/password_edit_text"
-                android:hint="@string/password"
+        <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"/>
+                android:transitionName="trtext_card"
+                app:cardCornerRadius="10dp"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:layout_margin="8dp">
 
-        <EditText
-                android:id="@+id/repeat_password_edit_text"
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/imageview_avatar"
+                        android:layout_width="128dp"
+                        android:layout_height="128dp"
+                        android:src="@drawable/jonsnow"
+                        app:civ_border_color="@color/colorAccent"
+                        app:civ_border_width="2dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="32dp"
+                        android:transitionName="trtext_avatar"/>
+
+                <TextView
+                        android:id="@+id/text_username"
+                        tools:text="your@email.com"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textStyle="bold"
+                        android:textSize="24sp"
+                        android:layout_margin="8dp"
+                        android:layout_gravity="center_horizontal"
+                        android:transitionName="trtext_username"/>
+
+                <TextView
+                        android:id="@+id/text_level"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="Level"
+                        android:textSize="18sp"
+                        android:layout_gravity="center_horizontal"
+                        android:transitionName="trtext_level"
+                        android:layout_marginBottom="16dp"/>
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"/>
+                android:transitionName="trtext_second_card"
+                app:cardCornerRadius="10dp"
+                android:layout_margin="8dp">
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                <TextView
+                        android:id="@+id/button_change_email"
+                        android:textSize="16sp"
+                        android:text="@string/change_email"
+                        android:textColor="@color/colorBlack"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="16dp"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:onClick="onEmailChangeClickButton"/>
+
+                <TextView
+                        android:id="@+id/button_change_username"
+                        android:textSize="16sp"
+                        android:text="@string/change_username"
+                        android:textColor="@color/colorBlack"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="16dp"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:onClick="onUsernameChangeClickButton"/>
+
+                <TextView
+                        android:id="@+id/button_change_password"
+                        android:textSize="16sp"
+                        android:text="@string/change_password"
+                        android:textColor="@color/colorBlack"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="16dp"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:onClick="onPasswordChangeClickButton"/>
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="10dp"
+                android:layout_margin="8dp">
+
+            <TextView
+                    android:id="@+id/button_logout"
+                    android:textSize="16sp"
+                    android:text="@string/logout"
+                    android:textColor="@color/colorRed"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true"/>
+
+
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
-    <Button
-            android:id="@+id/save_user_settings_button"
-            android:text="@string/save_info"
-            style="@style/Widget.AppCompat.Button.Colored"
+    <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/button_save"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|bottom"
-            android:layout_marginBottom="32dp"/>
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_done_white_24dp"
+            android:layout_gravity="bottom|end"/>-->
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
