--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -11,26 +11,37 @@
             android:layout_gravity="center_horizontal|center_vertical"/>
 
     <androidx.core.widget.NestedScrollView
+            android:id="@+id/layout_account"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/layout_account"
+        <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+            <TextView
+                    android:id="@+id/text_header"
+                    android:text="@string/account"
+                    android:textColor="@color/colorAccent"
+                    android:fontFamily="@font/pacifico"
+                    android:textSize="26sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"/>
 
             <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:cardCornerRadius="10dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.013"
+                    app:cardCornerRadius="10dp"
+                    android:layout_margin="8dp"
                     android:id="@+id/card_account"
                     android:foreground="?android:attr/selectableItemBackground"
                     android:clickable="true"
-                    android:focusable="true">
+                    android:focusable="true"
+                    android:transitionName="trtext_card">
 
                 <RelativeLayout
                         android:layout_margin="16dp"
@@ -45,7 +56,7 @@
                             app:civ_border_color="@color/colorAccent"
                             app:civ_border_width="2dp"
                             android:layout_centerVertical="true"
-                            android:transitionName="avatar_image"/>
+                            android:transitionName="trtext_avatar"/>
 
                     <TextView
                             android:id="@+id/text_username"
@@ -54,8 +65,9 @@
                             tools:text="Username"
                             android:textStyle="bold"
                             android:textSize="24sp"
-                            android:layout_marginLeft="16dp"
-                            android:layout_toRightOf="@+id/imageview_avatar"/>
+                            android:transitionName="trtext_username"
+                            android:layout_marginStart="16dp"
+                            android:layout_toEndOf="@+id/imageview_avatar"/>
 
                     <TextView
                             android:id="@+id/text_level"
@@ -63,66 +75,64 @@
                             android:layout_height="wrap_content"
                             tools:text="Level"
                             android:textSize="18sp"
-                            android:layout_marginLeft="16dp"
-                            android:layout_toRightOf="@+id/imageview_avatar"
+                            android:transitionName="trtext_level"
+                            android:layout_marginStart="16dp"
+                            android:layout_toEndOf="@+id/imageview_avatar"
                             android:layout_below="@+id/text_username"/>
 
                 </RelativeLayout>
 
             </androidx.cardview.widget.CardView>
 
+            <TextView
+                    android:id="@+id/text_categories"
+                    android:text="@string/categories"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="16dp"/>
+
             <androidx.cardview.widget.CardView
-                    android:id="@+id/categories_card"
+                    android:id="@+id/card_categories"
                     android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     app:cardCornerRadius="10dp"
-                    android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/card_account" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="1.0"
-                    app:layout_constraintVertical_bias="0.022">
+                    android:layout_margin="8dp"
+                    android:transitionName="trtext_second_card">
 
-                <RelativeLayout
-                        android:layout_margin="16dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                    <TextView
-                            android:id="@+id/text_categories"
-                            android:text="@string/categories"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textStyle="bold"
-                            android:textSize="24sp"/>
-
-                    <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/recyclerview_categories_account"
+                    <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@id/text_categories"
-                            android:layout_marginTop="8dp"
-                            android:layout_marginBottom="8dp"
-                    >
+                            android:layout_height="match_parent"
+                            android:orientation="vertical"
+                            android:padding="8dp">
 
-                    </androidx.recyclerview.widget.RecyclerView>
+                        <androidx.recyclerview.widget.RecyclerView
+                                android:id="@+id/recyclerview_categories_account"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="8dp"
+                                android:layout_marginBottom="8dp"
+                        >
 
-                    <Button
-                            android:id="@+id/button_edit_categories"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:drawableStart="@drawable/ic_edit_black_24dp"
-                            android:text="@string/edit_categories"
-                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                            android:layout_below="@id/recyclerview_categories_account"
-                            android:layout_marginStart="-8dp"
-                            android:layout_marginTop="8dp"
-                            android:drawablePadding="8dp"/>
+                        </androidx.recyclerview.widget.RecyclerView>
 
-                </RelativeLayout>
+                        <Button
+                                android:id="@+id/button_edit_categories"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:drawableTop="@drawable/ic_edit_black_24dp"
+                                android:text="@string/edit_categories"
+                                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                                android:layout_marginTop="8dp"
+                                android:drawablePadding="8dp"
+                                android:layout_gravity="center_horizontal"/>
+
+                    </LinearLayout>
 
             </androidx.cardview.widget.CardView>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
 
