some ui update, alert before log out

--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -147,7 +147,8 @@
                     android:padding="16dp"
                     android:foreground="?android:attr/selectableItemBackground"
                     android:clickable="true"
-                    android:focusable="true"/>
+                    android:focusable="true"
+                    android:onClick="onLogOutButtonClick"/>
 
 
         </androidx.cardview.widget.CardView>
