--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -13,6 +14,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+
+            <TextView
+                    android:id="@+id/text_header"
+                    android:text="@string/settings"
+                    android:textColor="@color/colorAccent"
+                    android:fontFamily="@font/pacifico"
+                    android:textSize="26sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"/>
 
             <androidx.cardview.widget.CardView
                     android:id="@+id/notifications_card"
@@ -30,23 +43,24 @@
                         android:orientation="vertical">
 
                     <FrameLayout
+                            android:id="@+id/button_enable_notifications"
                             android:layout_width="match_parent"
-                            android:layout_height="64dp"
+                            android:layout_height="wrap_content"
                             android:foreground="?android:attr/selectableItemBackground"
                             android:clickable="true"
                             android:focusable="true">
 
                         <TextView
                                 android:text="@string/enable_notifications"
-                                android:textSize="20sp"
-                                android:textColor="@color/colorGrey"
+                                android:textSize="16sp"
+                                android:textColor="@color/colorBlack"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_vertical"
-                                android:layout_marginStart="16dp"/>
+                                android:layout_margin="16dp"/>
 
                         <Switch
-
+                                android:id="@+id/switch_enable_notifications"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="16dp"
@@ -57,19 +71,19 @@
 
                     <FrameLayout
                             android:layout_width="match_parent"
-                            android:layout_height="64dp"
+                            android:layout_height="wrap_content"
                             android:foreground="?android:attr/selectableItemBackground"
                             android:clickable="true"
                             android:focusable="true">
 
                         <TextView
                                 android:text="@string/config_notifications"
-                                android:textSize="20sp"
-                                android:textColor="@color/colorGrey"
+                                android:textSize="16sp"
+                                android:textColor="@color/colorBlack"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_vertical"
-                                android:layout_marginStart="16dp"/>
+                                android:layout_margin="16dp"/>
 
                     </FrameLayout>
 
@@ -93,23 +107,24 @@
                         android:orientation="vertical">
 
                     <FrameLayout
+                            android:id="@+id/button_enable_dark_mode"
                             android:layout_width="match_parent"
-                            android:layout_height="64dp"
+                            android:layout_height="wrap_content"
                             android:foreground="?android:attr/selectableItemBackground"
                             android:clickable="true"
                             android:focusable="true">
 
                         <TextView
                                 android:text="@string/enable_dark_mode"
-                                android:textSize="20sp"
-                                android:textColor="@color/colorGrey"
+                                android:textSize="16sp"
+                                android:textColor="@color/colorBlack"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_vertical"
-                                android:layout_marginStart="16dp"/>
+                                android:layout_margin="16dp"/>
 
                         <Switch
-
+                                android:id="@+id/switch_enable_dark_mode"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="16dp"
@@ -119,19 +134,19 @@
 
                     <FrameLayout
                             android:layout_width="match_parent"
-                            android:layout_height="64dp"
+                            android:layout_height="wrap_content"
                             android:foreground="?android:attr/selectableItemBackground"
                             android:clickable="true"
                             android:focusable="true">
 
                         <TextView
                                 android:text="@string/color_theme"
-                                android:textSize="20sp"
-                                android:textColor="@color/colorGrey"
+                                android:textSize="16sp"
+                                android:textColor="@color/colorBlack"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_vertical"
-                                android:layout_marginStart="16dp"/>
+                                android:layout_margin="16dp"/>
 
                     </FrameLayout>
 
@@ -151,50 +166,19 @@
 
                 <FrameLayout
                         android:layout_width="match_parent"
-                        android:layout_height="64dp"
+                        android:layout_height="wrap_content"
                         android:foreground="?android:attr/selectableItemBackground"
                         android:clickable="true"
                         android:focusable="true">
 
                     <TextView
                             android:text="@string/about"
-                            android:textSize="20sp"
-                            android:textColor="@color/colorGrey"
+                            android:textSize="16sp"
+                            android:textColor="@color/colorBlack"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
-                            android:layout_marginStart="16dp"/>
-
-                </FrameLayout>
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                    android:id="@+id/logout_card"
-                    android:layout_width="match_parent"
-                    app:cardCornerRadius="10dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginBottom="8dp">
-
-                <FrameLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="64dp"
-                        android:onClick="onLogOutButtonClick"
-                        android:foreground="?android:attr/selectableItemBackground"
-                        android:clickable="true"
-                        android:focusable="true">
-
-                    <TextView
-                            android:text="@string/logout"
-                            android:textSize="20sp"
-                            android:textColor="@color/colorRed"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginStart="16dp"/>
+                            android:layout_margin="16dp"/>
 
                 </FrameLayout>
 
@@ -202,6 +186,6 @@
 
         </LinearLayout>
 
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
