refactor, making dark theme, android q support

--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:text="@string/categories"
             android:fontFamily="@font/pacifico"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/colorOrange"
             android:textSize="24sp"
             android:layout_marginTop="8dp"
             android:layout_gravity="center_horizontal"/>
