--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -5,8 +5,18 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.activity.UserActivity"
+        tools:context=".view.activity.UserActivity"
         android:id="@+id/layout_user">
+
+    <Button
+            android:id="@+id/button_back"
+            android:layout_width="48dp"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_arrow_back_black_24dp"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_marginTop="12dp"
+            android:layout_marginStart="8dp"
+            android:onClick="onBackButtonClick"/>
 
     <LinearLayout
             android:layout_width="match_parent"
@@ -16,7 +26,7 @@
         <TextView
                 android:id="@+id/text_header"
                 android:text="@string/account"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/colorOrange"
                 android:fontFamily="@font/pacifico"
                 android:textSize="26sp"
                 android:layout_width="wrap_content"
@@ -45,7 +55,7 @@
                         android:layout_width="128dp"
                         android:layout_height="128dp"
                         android:src="@drawable/jonsnow"
-                        app:civ_border_color="@color/colorAccent"
+                        app:civ_border_color="@color/colorOrange"
                         app:civ_border_width="2dp"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="32dp"
