--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -2,7 +2,8 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent" android:layout_height="match_parent">
+        android:layout_width="match_parent" android:layout_height="match_parent"
+        android:backgroundTint="?android:colorPrimary">
 
     <ProgressBar
             android:id="@+id/progressbar_account"
@@ -10,27 +11,56 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|center_vertical"/>
 
+    <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="70dp">
+
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <androidx.appcompat.widget.Toolbar
+                    android:layout_width="match_parent"
+                    android:layout_height="68dp"
+                    android:layout_gravity="center_vertical|center_horizontal"
+                    app:layout_collapseMode="pin">
+
+                <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                    <TextView
+                            android:id="@+id/text_header"
+                            android:text="@string/account"
+                            android:textColor="@color/colorOrange"
+                            android:fontFamily="@font/pacifico"
+                            android:textSize="26sp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal|center_vertical"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginStart="-12dp"/>
+
+                </FrameLayout>
+
+            </androidx.appcompat.widget.Toolbar>
+
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
     <androidx.core.widget.NestedScrollView
             android:id="@+id/layout_account"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
-
-            <TextView
-                    android:id="@+id/text_header"
-                    android:text="@string/account"
-                    android:textColor="@color/colorAccent"
-                    android:fontFamily="@font/pacifico"
-                    android:textSize="26sp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"/>
 
             <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
@@ -53,7 +83,7 @@
                             android:layout_width="72dp"
                             android:layout_height="72dp"
                             android:src="@drawable/jonsnow"
-                            app:civ_border_color="@color/colorAccent"
+                            app:civ_border_color="@color/colorOrange"
                             app:civ_border_width="2dp"
                             android:layout_centerVertical="true"
                             android:transitionName="trtext_avatar"/>
