--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -18,7 +18,7 @@
             <TextView
                     android:id="@+id/text_header"
                     android:text="@string/settings"
-                    android:textColor="@color/colorAccent"
+                    android:textColor="@color/colorOrange"
                     android:fontFamily="@font/pacifico"
                     android:textSize="26sp"
                     android:layout_width="wrap_content"
