--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -82,7 +82,7 @@
                             android:id="@+id/imageview_avatar"
                             android:layout_width="72dp"
                             android:layout_height="72dp"
-                            android:src="@drawable/jonsnow"
+                            android:src="@drawable/avatar_placeholder"
                             app:civ_border_color="@color/colorOrange"
                             app:civ_border_width="2dp"
                             android:layout_centerVertical="true"
