--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -41,7 +41,7 @@
                             android:layout_gravity="center_horizontal|center_vertical"
                             android:layout_marginTop="8dp"
                             android:layout_marginBottom="8dp"
-                            android:layout_marginStart="-12dp"/>
+                            android:layout_marginStart="-16dp"/>
 
                 </FrameLayout>
 
@@ -116,51 +116,20 @@
 
             <TextView
                     android:id="@+id/text_categories"
-                    android:text="@string/categories"
+                    android:text="@string/categories_caps"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="12sp"
                     android:layout_marginStart="12dp"
                     android:layout_marginTop="16dp"/>
 
-            <androidx.cardview.widget.CardView
-                    android:id="@+id/card_categories"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardCornerRadius="10dp"
+            <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerview_categories_account"
                     android:layout_margin="8dp"
-                    android:transitionName="trtext_second_card">
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-                    <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical"
-                            android:padding="8dp">
-
-                        <androidx.recyclerview.widget.RecyclerView
-                                android:id="@+id/recyclerview_categories_account"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="8dp"
-                                android:layout_marginBottom="8dp"
-                        >
-
-                        </androidx.recyclerview.widget.RecyclerView>
-
-                        <Button
-                                android:id="@+id/button_edit_categories"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:drawableTop="@drawable/ic_edit_black_24dp"
-                                android:text="@string/edit_categories"
-                                style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                                android:layout_marginTop="8dp"
-                                android:drawablePadding="8dp"
-                                android:layout_gravity="center_horizontal"/>
-
-                    </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
+            </androidx.recyclerview.widget.RecyclerView>
 
         </LinearLayout>
 
